# external_soci

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  lookaside.txt
resources/: remove_autoptr_323.patch  remove_strtoll_323.patch  soci_static_backend_provider.cpp
resources/pkgconfig_system/: soci.pc
resources/soci_323_cmake/: CMakeLists.txt
resources/soci_cmake/: CMakeLists.txt
test/: CMakeLists.txt  soci_test.cpp
